apps/generic/overlays/freshrss/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
spec:
  template:
    spec:
      containers:
        - name: container
          image: freshrss/freshrss:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /var/www/FreshRSS/data
              subPath: configs/freshrss/data/
            - name: yasr-volume
              mountPath: /var/www/FreshRSS/extensions
              subPath: configs/freshrss/extensions/
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /i/
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
