apps/generic/overlays/freshrss/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
