apps/generic/overlays/freshrss/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  annotations:
    forecastle.stakater.com/appName: "FreshRSS"
    forecastle.stakater.com/group: "Tools"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://freshrss.org/favicon.ico"
